--- a/prep-javascript-variables/index.html
+++ b/prep-javascript-variables/index.html
@@ -10,7 +10,7 @@
   <script>
     var fullName = 'NadiaKim';
     console.log(fullName);
-    var number0fpets = '1';
+    var number0fpets = 1;
     console.log(number0fpets);
     var likesVegetables = Boolean(true);
     console.log(likesVegetables);
