--- a/prep-javascript-conditionals/index.html
+++ b/prep-javascript-conditionals/index.html
@@ -13,27 +13,27 @@
     if (age < 18) {
       text = 'A child';
     } else { text = 'An adult'; }
-    console.log('An adult', age);
+    console.log(text);
 
     const student1Score = 99;
     if (student1Score >= 70) {
       text = 'Congrats you received a passing grade!';
     } else { text = 'Oh no you failed!'; }
-    console.log('Congrats you received a passing grade!', student1Score);
+    console.log(text);
 
     const student2Score = 55;
     if (student2Score < 60) {
       text = 'F';
     } else if (student2Score < 70) { text = 'D'; } else if (student2Score < 80) { text = 'C'; } else if (student2Score < 90) { text = 'B'; } else if (student2Score < 100) { text = 'A'; } else { text = 'A++'; }
-    console.log('F', student2Score);
+    console.log(text);
 
     const season = 'spring';
     if (season === 'summer') { text = "it's hot today"; } else if (season === 'spring') { text = 'the flowers are blooming'; } else if (season === 'autumn') { text = 'the leaves are changing colors'; } else if (season === 'winter') { text = "it's cold today"; } else { text = 'please enter a valid season'; }
-    console.log('the flowers are blooming', season);
+    console.log(text);
 
     const dayOfTheWeek = 'tuesday';
     if (dayOfTheWeek === 'saturday' || dayOfTheWeek === 'sunday') { text = 'have a good weekend!'; } else { text = 'its a weekday!'; }
-    console.log('its a weekday!', dayOfTheWeek);
+    console.log(text);
   </script>
 </body>
 
