Revised prep-javascript-dom-creation.

--- a/prep-javascript-dom-creation/index.html
+++ b/prep-javascript-dom-creation/index.html
@@ -12,13 +12,10 @@
 
   </div>
   <script>
-    let div = document.querySelector(#container)
-    var container = docuument.querySelector(#container)
-    console.log(container)
-    document.createElement(h1) = var $heading
-    document.createElement(h1).textContent = 'Hello World!'
-    $container.appendChild($heading)
-
+    var container = document.getElementById('container');
+    var $heading = document.createElement('h1');
+    $heading.textContent = 'Hello World!';
+    container.appendChild($heading);
   </script>
 </body>
 
